<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.jcabrera31.book.BookListActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_bookTitle"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/search_title"
        android:ems="10"
        android:id="@+id/etSearchTitle"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/search_author"
        android:ems="10"
        android:id="@+id/etSearchAuthor"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/search_isbn"
        android:ems="10"
        android:id="@+id/etSearchISBN"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <Button
        android:text="@string/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_gravity="center"
        android:elevation="0dp"
        android:textColor="@color/colorPrimaryDark" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bookListView" />

</LinearLayout>
